# ecobici-api

./: .dockerignore  .env.production  .gitignore  CLOUDFLARE.md  DEPLOYMENT.md  Dockerfile  README.md  configurar_servidor_produccion.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  collector.py  feedback.py  gbfs.py  history.py  lags.py  predictor.py  scheduler.py  statistics.py  weather.py
docs/: deployment.md
scripts/: migrate_legacy_parquet.py  test_precalculate.py  test_predictor.py
tests/: __init__.py  test_api.py
